# BenchMesh

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  ELECTRON.md  LICENSE  METRICS_WEBSOCKET_IMPLEMENTATION.md  QUICK_FIX_STEPS.md  README.md  README.md.v1-template  RESTART_AND_TEST.sh  STARTUP.md  THIRD-PARTY-NOTICES.md  UPGRADE_SUMMARY.md  config.yaml  exampleRS232.py  exampleRS232text.py  package.json  start.sh  test_automation_ui.sh  version.json
benchmesh-serial-service/: ADAPTIVE_THROTTLING.md  CACHE_DESIGN.md  CONFIG_SCHEMA_V2.md  DRIVER_REPL_MANUAL.md  MANIFEST_METHODS_SCHEMA.md  MANIFEST_POLLING_PATTERN.md  MANIFEST_TRANSPORT_SUPPORT.md  PRODUCTION_RETRY_IMPLEMENTATION.md  README.md  README_FASTAPI.md  SCREENSHOT_IMPLEMENTATION_SUMMARY.md  TEST_REPORT_20251028.md  USB_TMC_SCREENSHOT_STATUS.md  config.yaml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  tmp_test_api.py  tmp_test_api2.py  version.json
benchmesh-serial-service/:memory:/: recordings.db
benchmesh-serial-service/docs/: CIRCUIT_BREAKER.md  SCREENSHOT_CAPTURE_GUIDE.md
benchmesh-serial-service/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.config.with-service.ts  tsconfig.json  vite.config.ts
benchmesh-serial-service/scripts/: diagnose_screenshot.py  test_owon_screenshot.py  test_screenshot_retry.py
benchmesh-serial-service/tests/: conftest.py  test_api_drivers.py  test_api_instruments.py  test_api_method_resolver.py  test_api_recording.py  test_api_system.py  test_cache.py  test_clock.py  (+24 more)
(+263 files in other folders)
